force-app/main/default/objects/PDF_Template__c/PDF_Template__c.object-meta.xml
<CustomObject>
    <label>PDF Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>