force-app/main/default/objects/PDF_Template__c/fields/Insert_Fields__c.field-meta.xml
<CustomField>
    <fullName>Insert_Fields__c</fullName>
    <defaultValue>&apos;[]&apos;</defaultValue>
    <label>Insert Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>