force-app/main/default/objects/PDF_Template__c/fields/Jenis_Surat__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Surat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jenis Surat</label>
    <referenceTo>Jenis_Surat__c</referenceTo>
    <relationshipLabel>PDF Template</relationshipLabel>
    <relationshipName>PDF_Template</relationshipName>
    <type>Lookup</type>
</CustomField>