force-app/main/default/objects/PDF_Template__c/fields/PDF_Number__c.field-meta.xml
<CustomField>
    <fullName>PDF_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>PDF Number</label>
    <type>AutoNumber</type>
</CustomField>