force-app/main/default/objects/PDF_Template__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <label>Related Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Assets_Request__c</fullName>
            </value>
            <value>
                <fullName>Mass_Notification__c</fullName>
            </value>
            <value>
                <fullName>List_Konsumen__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>