force-app/main/default/objects/PDF_Template__c/fields/Tanggal__c.field-meta.xml
<CustomField>
    <fullName>Tanggal__c</fullName>
    <label>Tanggal</label>
    <type>Date</type>
</CustomField>